chore: fixed bug of clipping first element

--- a/packages/components/breadcrumbs/breadcrumbs.scss
+++ b/packages/components/breadcrumbs/breadcrumbs.scss
@@ -7,7 +7,6 @@
     gap: var(--kbq-breadcrumbs-gap);
     flex-grow: 1;
     flex-wrap: wrap;
-    overflow: hidden;
 
     .kbq-overflow-items {
         // add space not to cut focus outline
